Stop header logo from wrapping

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body > div{
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
+    min-width: max-content;
 }
 
 /* ----------------Header Main Section----------------------- */
